# Analizador_de_Datos

./: .gitignore  Agents_EN.md  README.md  README_EN.md  README_ES.md  app.py  pyproject.toml  requirements.txt
src/: processor.py  utils.py  visualizer.py
src/components/: __init__.py  charts.py  exports.py  sidebar.py
src/languages/: __init__.py  translations.py
tests/: test_processor.py
